welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:9: error: value ** is not a member of Int
  if (((num%10**ordre)<=2) || ((num%10**ordre)>=8)) return true
              ^nearTen:9: error: value ** is not a member of Int
  if (((num%10**ordre)<=2) || ((num%10**ordre)>=8)) return true
                                      ^