welcome.lessons.welcome.bat.bool2.NearTen.scala.code
def nearTen(num:Int):Boolean = {
  
  var reste=num
  var ordre=0
  while (reste>9) {
    reste=reste%10
    ordre=ordre+1
  }
  if (((num%10**ordre)<=2) || ((num%10**ordre)>=8)) return true
  else return false
  
}
